# critic-rubrics

./: .gitignore  CONTRIBUTING.md  README.md  UNIFIED_RUBRICS_PROPOSAL.md  pyproject.toml  test_schema_consistency.py
.github/workflows/: ci.yml  tests.yml
.openhands/: TASKS.md
.openhands/microagents/: repo.md
.openhands/skills/: repo.md
batch_results/: batch_openai_20250821_211845.jsonl
critic_rubrics/: MIGRATION_GUIDE.md  README.md  __init__.py  annotation.py  annotator.py  batch_processor.py  core.py  examples.py  feature.py  mixins.py  prediction.py  pyproject.toml  types.py
critic_rubrics/annotators/: __init__.py  annotator.py  base.py
critic_rubrics/annotators/solvability/: __init__.py  annotator.py
critic_rubrics/annotators/trajectory/: __init__.py  annotator.py
critic_rubrics/rubrics/: __init__.py  base.py  conversation.py  solvability.py  trajectory.py  trajectory_with_user_followup.py
critic_rubrics/rubrics/trajectory/: __init__.py  converter.py  rubric_impl.py  trajectory.py  trajectory_with_user.py
critic_rubrics/tests/: test_annotators.py  test_core.py  test_rubrics.py
docs/: BATCH_ANNOTATE.md
examples/: batch_processing_example.py
scripts/: read_shards_and_annotate.py  read_shards_and_generate_requests.py
scripts/batch_annotate/: 1_send_annotation_requests.py  1_send_annotation_requests.sh  2_download_annotations.py  2_download_annotations.sh  3_consolidate_and_convert_outputs.py  send_annotation_requests.sh
tests/: test_feature_data_conversion.py  test_mixin.py  test_trajectory_schema.py  test_trajectory_schema_match.py
tests/rubrics/trajectory/: test_compare.py  test_trajectory_legacy_impl.py  test_trajectory_w_user_legacy_impl.py
unified_rubrics/: __init__.py  annotators.py  core.py  examples.py  pyproject.toml  rubrics.py
unified_rubrics/tests/: __init__.py  test_core.py  test_rubrics.py
