[project]
name = "critic-rubrics"
version = "0.1.0"
description = "Unified rubrics system for LLM-based feature extraction and conversation analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ah-data>=0.1.3",
    "litellm>=1.76.0",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["critic_rubrics*"]
exclude = ["tests*", "data*"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "psutil>=7.0.0",
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 200

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["openhands"]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]

[tool.uv.sources]
ah-data = { git = "https://github.com/All-Hands-AI/data-sdk" }
